# gpt_arxiv_summary

./: .gitignore  README.md  pyproject.toml  run.py
outputs/2111.12340/: summary.md  summary.txt  summary_ja.txt  text.txt
outputs/soccertrack/: summary.md  summary.txt  summary_ja.txt  text.txt
prompts/: summarize_text.txt
